# pandera-docs

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  setup.cfg  setup.py
src/pandera_docs/: _version.py
