[build-system]
requires = ["setuptools", "versioneer[toml]", "toml"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = [
  "src"
]

[tool.interrogate]
ignore-init-module-imports = true
ignore-init-module = true
ignore-init-method = true
fail-under = 95
exclude = ["setup.py", "versioneer.py", "src/pandera_docs/_version.py", "tests/"]

[tool.isort]
profile = "black"
line_length = 100
skip = ["setup.py", "versioneer.py", "src/pandera_docs/_version.py", "src/pandera_docs/__init__.py"]

[tool.black]
line-length = 100
extend-exclude = ["setup.py", "versioneer.py", "src/pandera_docs/_version.py"]
